[package]
name = "milli_bug"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
milli = { git = "https://github.com/meilisearch/milli", rev = "4c9531b" }
heed = { git = "https://github.com/Kerollmops/heed", tag = "v0.12.1" }
